# registryui

./: .gitignore  .justfile  .vampus.yml  Dockerfile  README.md
backend/: Cargo.toml
backend/src/: constants.rs  main.rs
backend/src/http/: auth.rs  health.rs  mod.rs  registry.rs
backend/src/models/: catalog.rs  config_descriptor.rs  data.rs  layer_descriptor.rs  manifest_info.rs  manifest_v2.rs  mod.rs  paginable.rs  registry_client.rs  repository_info.rs  response.rs  tag_detail.rs  tag_list.rs  token_claims.rs  user.rs
