[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.7", features = ["macros", "json", "original-uri"] }
axum-extra = { version = "0.10.3", features = ["cookie"] }
bcrypt = "0.17.1"
bytes = { version = "1.11.0", features = ["serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
cookie = "0.18.1"
dotenv = "0.15.0"
hex = "0.4.3"
http = "1.3.1"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
openssl = { version = "0.10.75", features = ["vendored"] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
time = "0.3.44"
tokio = { version = "1.48.0", features = ["full", "time"] }
tokio-util = "0.7.17"
tower-http = { version = "0.6.6", features = ["cors", "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["tracing", "env-filter", "local-time"] }
uuid = { version = "1.18.1", features = ["v4"] }
reqwest = { version = "0.12.6", features = ["json"] }

[dev-dependencies]
dotenv = "0.15.0"
uuid = { version = "1.8.0", features = ["v4"] }
rand = "0.8.5"
num-traits = "0.2"
once_cell = "1.19.0"
tower = { version = "0.5.2", features = ["full"] }
hyper = { version = "1.7.0", features = ["full"] }
serde_json = "1.0.145"
